Experimental DDS texture patch from Mitchell Stokes that allows DDS texture to be used uncompressed in OpenGL. Since OpenGL uses a different coordinate system than DirectX, DDS textures are upside down in OpenGL. That means this patch could cause some problems with people already using DDS textures. A UI option and a do version could address this.

--- a/source/blender/gpu/CMakeLists.txt
+++ b/source/blender/gpu/CMakeLists.txt
@@ -58,5 +58,10 @@ set(SRC
 
 add_definitions(-DGLEW_STATIC)
 
+if(WITH_DDS)
+	add_definitions(-DWITH_DDS)
+endif()
+
+
 blender_add_lib(bf_gpu "${SRC}" "${INC}" "${INC_SYS}")
 
