--- a/source/blender/gpu/SConscript
+++ b/source/blender/gpu/SConscript
@@ -13,4 +13,8 @@ if env['OURPLATFORM'] in ('win32-vc', 'win32-mingw', 'linuxcross', 'win64-vc'):
 
 incs += ' ' + env['BF_OPENGL_INC']
 
+
+if env['WITH_BF_DDS']:
+	defs.append('WITH_DDS')
+
 env.BlenderLib ( 'bf_gpu', sources, Split(incs), defines = defs, libtype=['core','player'], priority=[160,110] )
